Fix: portfolio item image borders & spacing

--- a/css/portfolio_grid.css
+++ b/css/portfolio_grid.css
@@ -10,6 +10,11 @@ h2{
     margin: 20px; 
 }
 
+.image-container {
+    margin-bottom: 30px;
+
+}
+
 /* Each article within the grid */
 .portfolio-grid article {
 
@@ -50,27 +55,24 @@ h2{
     position: relative;
     width: 100%;
     height: 0;
-    padding-bottom: 75%; 
-    overflow: hidden;
+    padding-bottom: 75%;  /* Aspect ratio (width:height 4:3) */
 }
 
-.primary-image {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-    transition: opacity 0.3s ease-in-out;
+.primary-image,
+.hover-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;  /* Make the image fill the container */
+    height: 100%;  /* Maintain the aspect ratio */
+    object-fit: cover;  /* Ensure the image covers the area without distortion */
+    border-radius: var(--border-radius); /* Ensure border-radius consistency */
+    transition: opacity 0.3s ease-in-out; /* Smooth transition */
 }
 
 .hover-image {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
     opacity: 0;
     transition: opacity 0.1s ease;
-    object-fit: cover; 
-    border-radius: var(--border-radius);
 }
 
 .image-container:hover .primary-image {
@@ -80,6 +82,7 @@ h2{
 .image-container:hover .hover-image {
     opacity: 1;
 }
+
 
 
 /* Responsive Design: Mobile */
